# sovereign

./: .gitignore  Makefile  pyproject.toml  test_out.txt  tmp_suite.json
scripts/: ci_all.sh  ci_check_baselines.sh  ci_golden_suite.sh  ci_golden_suite_v10.sh  ci_golden_suite_v11_subprocess.sh  ci_golden_suite_v2.sh  ci_golden_suite_v3.sh  ci_golden_suite_v3_warm.sh  ci_golden_suite_v4.sh  ci_golden_suite_v5.sh  ci_golden_suite_v6.sh  ci_golden_suite_v6_warm.sh  ci_golden_suite_v7.sh  ci_golden_suite_v8.sh  ci_golden_suite_v8_replay.sh  ci_golden_suite_v9.sh  ci_learn_loop_smoke.sh  ci_promo_smoke.sh  ci_sealed.sh
tests/: conftest.py  test_controller.py  test_controller_v2.py  test_controller_v3.py  test_core.py  test_coverage.py  test_coverage_kpi.py  test_dataset_packager.py  test_doctor.py  test_dominance_summary_written.py  test_expected_verdict_kpis.py  test_heuristic_v1_repairs_seeded_failures.py  test_ladder_compounds_multi_iter.py  test_learn_loop.py  test_learn_loop_auto_sealed_default.py  test_learn_loop_flags.py  test_learn_loop_improves.py  test_learn_loop_multi_iter.py  test_learn_loop_retrieval_autowire.py  test_learn_loop_retrieval_repair_v1_smoke.py  test_learn_loop_withheld_gate.py  test_promo_smoke.py  test_promotion_commit_rules.py  test_promotion_store.py  test_promotion_store_v2.py  test_promotion_tiers.py  test_propose_nonempty_guard.py  test_propose_seed_from_promotion.py  test_proposer.py  test_proposer_retrieval_repair_v1.py  test_report_norm.py  test_retrieval_proposer.py  test_reuse_reporting.py  test_sealed_cli.py  test_sealed_v3.py  (+15 more)
(+393 files in other folders)
