[project]
name = "sovereidolon-v1"
version = "0.1.0"
description = "SOVEREIDOLON v1 MVP"
readme = "README.md"
authors = [
    { name = "GammAsu", email = "deltareally@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "blake3>=1.0.8",
    "orjson>=3.11.5",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.11.0",
    "rich>=14.2.0",
    "typer>=0.21.1",
]

[project.scripts]
sovereidolon = "sovereidolon_v1.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"
fix = false
extend-exclude = [".hypothesis"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.lint.isort]
known-first-party = ["sovereidolon_v1"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "hypothesis>=6.150.2",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]
